--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "notiflix": "^3.2.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-icons": "^4.12.0",
+    "react-is": "^16.13.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
