--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "homepage": "https://nhnserg.github.io/goit-react-hw-05-movies/",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.3"
   },
